syntax = "proto3"; // 使用protobuf版本3

option go_package = "./go_docker"; // 生成的.pb.go的文件存放目录
package apis;   //.proto文件所在目录

// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}